# durg-compatiblity

./: .env.example  .gitattributes  .gitignore  3D_VISUALIZATION_FIX_REPORT.md  Architecting QuantaMed Quantum Pipeline.md  BACKEND_VALIDATION_REPORT.md  DEBUGGING_REPORT.md  DYNAMIC_PATIENT_IMPLEMENTATION.md  DYNAMIC_PATIENT_SYSTEM_PLAN.md  Dockerfile  FINAL_SYSTEM_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INIT_FILES_STATUS_REPORT.md  MOLECULAR_BINDING_CINEMATIC_ENHANCEMENTS.md  Optimizing Drug Triage Environment.md  PRODUCTION_READINESS_REPORT.md  QUANTUM_PROTEIN_FOLDING_GUIDE.md  README.md  analyze_ss.py  backend_review_simple.py  check_backend_errors.py  comprehensive_backend_review.py  fix_brain_parser.py  fix_tabs.py  inference.py  openenv.yaml  patient_asthma.json  patient_depression.json  patient_diabetes.json  patient_hypertension.json  pyproject.toml  rebrand.py  replace.py  requirements.txt  run_tests.py  sample_patient.json  sasha.txt  start.sh  test_alphafold.py  (+10 more)
environment/: __init__.py  actions.py  env.py  graders.py  models.py  tasks.py
environment/fixtures/: ISOTRETINOIN.json  METFORMIN.json  ROFECOXIB.json
fafw/: Drug_Triage_RL_Environment_Report.docx  QuantaMed_Interactive_App.html  QuantaMed_PRD_v1.0_extracted.txt  can i use qiskit,cirq or pennylane to simulate pro.md  fa.sty
frontend/: .gitignore  package-lock.json
server/: app.py  index.html  kaggle_data.py  mypy_report.txt  patient_schema.py  pdf_report.py  protein_dynamics.py  protein_structure.py  quantamed_sim.py  scoring_engine.py
server/api/: __init__.py  (+1 more)
(+17 files in other folders)
